[package]
name = "clock"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
publish = false

[features]
canvas = []

[dependencies]
iced = { path = "../..", features = ["canvas", "async-std", "debug"] }
iced_native = { path = "../../native" }
iced_wgpu = "0.1.0"
chrono = "0.4"
async-std = { version = "1.0", features = ["unstable"] }
toml = "0.5.6"
serde = "1.0.105"
serde_derive = "1.0.105"
oauth-client = { git = "https://github.com/ckampfe/oauth-client-rs.git" }
twitter-api = { git = "https://github.com/ckampfe/twitter-api-rs.git" }
tokio = "0.2.13"
